--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,29 @@
       <artifactId>netty-all</artifactId>
       <version>4.1.111.Final</version>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-example</artifactId>
+      <version>4.1.111.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.25.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+      <!-- 引入Log4j核心模块 -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.20.0</version>
+      </dependency>
 
+      <!-- 引入Log4j API模块 -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.20.0</version>
+      </dependency>
   </dependencies>
 </project>
